# rust_markdown_app

./: .gitignore  .mcp.json  CLAUDE.md  README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  markdown.rs  scanner.rs
ui/: app.js  index.html  styles.css
