[package]
name = "markview"
version = "0.1.0"
edition = "2021"
description = "A desktop markdown file viewer"

[lib]
name = "markview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.13"
walkdir = "2"
